clusters/cluster3/default/root.woohoosvcs.com.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: root
  namespace: default
  labels:
    app.kubernetes.io/name: root
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: root
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: root
        app.kubernetes.io/version: 1.0.0
    spec:
      containers:
        - name: root
          image: localhost/root
          imagePullPolicy: "IfNotPresent"
          resources:
            requests:
              cpu: "25m"
              memory: "20Mi"
            limits:
              cpu: "500m"
              memory: "128Mi"
          startupProbe:
            httpGet:
              port: httpd
            initialDelaySeconds: 5
            failureThreshold: 12
            periodSeconds: 5
          livenessProbe:
            httpGet:
              port: httpd
            periodSeconds: 5
            timeoutSeconds: 30
            failureThreshold: 12
          ports:
            - name: httpd
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: root-service
  namespace: default
spec:
  ports:
  - name: httpd-port
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/name: root
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: root-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/enable-owasp-core-rules: "false"
    #cert-manager.io/cluster-issuer: "my-ca-cluster-issuer"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - root.localdev.me
    secretName: root-localdev-me-tls
  rules:
  - host: root.localdev.me
    http:
      paths:
      - backend:
          service:
            name: root-service
            port:
              number: 80
        path: /
        pathType: Prefix
